--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cmdk": "^1.1.1",
     "convex": "^1.31.6",
     "lucide-react": "^0.563.0",
+    "motion": "^12.29.2",
     "next": "16.1.4",
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
